<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView android:layout_width="wrap_content"
              android:layout_height="56dp"
              android:text="@string/user_name"
              android:id="@+id/userNameTv"
              app:layout_constraintEnd_toStartOf="@+id/contact_user_name"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="@dimen/layout_margin"
              android:layout_marginStart="@dimen/layout_margin"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginEnd="@dimen/layout_margin" android:layout_marginRight="@dimen/layout_margin"
              app:layout_constraintVertical_bias="0.1"/>

    <!-- can use text input layout too. Keeping it simple -->

    <EditText android:layout_width="0dp"
              android:layout_height="56dp"
              android:ems="100"
              android:id="@+id/contact_user_name"
              app:layout_constraintStart_toEndOf="@+id/userNameTv"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              android:hint="@string/enter_contact_user_name"
              android:inputType="text"
              android:layout_marginEnd="@dimen/layout_margin"
              android:layout_marginRight="@dimen/layout_margin"
              app:layout_constraintVertical_bias="0.05"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="56dp"
              android:text="@string/phone_number"
              android:id="@+id/phoneNumberTv"
              app:layout_constraintEnd_toStartOf="@+id/contact_phone_number"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="@dimen/layout_margin"
              android:layout_marginStart="@dimen/layout_margin"
              app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginEnd="@dimen/layout_margin"
              android:layout_marginRight="@dimen/layout_margin"
              app:layout_constraintHorizontal_bias="0.105" app:layout_constraintHorizontal_chainStyle="packed"
              app:layout_constraintTop_toTopOf="@+id/guideline2" android:layout_marginTop="8dp" app:layout_constraintVertical_bias="0.04"/>


    <EditText android:layout_width="0dp"
              android:layout_height="56dp"
              android:ems="100"
              android:id="@+id/contact_phone_number"
              app:layout_constraintStart_toEndOf="@+id/phoneNumberTv"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="@+id/guideline2"
              app:layout_constraintBottom_toBottomOf="parent"
              android:hint="@string/enter_phone_number"
              android:inputType="phone"
              android:layout_marginEnd="@dimen/layout_margin" android:layout_marginRight="@dimen/layout_margin"
              app:layout_constraintVertical_bias="0.0"
              app:layout_constraintHorizontal_bias="0.1" android:layout_marginTop="8dp"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="56dp"
              android:text="@string/email_address"
              android:id="@+id/emailTv"
              app:layout_constraintEnd_toStartOf="@+id/phoneNumberTv"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="@dimen/layout_margin"
              android:layout_marginStart="@dimen/layout_margin"
              app:layout_constraintTop_toTopOf="@+id/guideline4"
              app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginEnd="@dimen/layout_margin" android:layout_marginRight="@dimen/layout_margin"
              app:layout_constraintVertical_bias="0.049" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"/>


    <EditText android:layout_width="0dp"
              android:layout_height="56dp"
              android:ems="100"
              android:id="@+id/contact_email"
              app:layout_constraintStart_toEndOf="@+id/emailTv"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="@+id/guideline4"
              app:layout_constraintBottom_toBottomOf="parent"
              android:hint="@string/enter_contact_email"
              android:inputType="textEmailAddress"
              android:layout_marginEnd="@dimen/layout_margin" android:layout_marginRight="@dimen/layout_margin"
              app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"/>

    <android.support.constraint.Guideline
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/guideline2" app:layout_constraintGuide_begin="80dp"
            android:orientation="horizontal"/>
    <android.support.constraint.Guideline
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/guideline3" app:layout_constraintGuide_begin="90dp"
            android:orientation="vertical"/>
    <android.support.constraint.Guideline
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/guideline4" app:layout_constraintGuide_begin="150dp"
            android:orientation="horizontal"/>

</android.support.constraint.ConstraintLayout>